force-app/main/default/objects/Student__c/fields/Last_Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Feedback_Date__c</fullName>
    <label>Last Feedback Date</label>
    <type>Date</type>
</CustomField>