force-app/main/default/objects/Student__c/fields/Parent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>