force-app/main/default/objects/Student__c/fields/Send_Report__c.field-meta.xml
<CustomField>
    <fullName>Send_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Report</label>
    <type>Checkbox</type>
</CustomField>