force-app/main/default/objects/Student__c/fields/Teacher_Contact__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Students (Teacher Contact)</relationshipLabel>
    <relationshipName>Teacher_Students</relationshipName>
    <type>Lookup</type>
</CustomField>