force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Contact_Number__c</columns>
    <columns>ID__c</columns>
    <columns>Parent_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>